tests/examples/bad/class_member_method_assignment.lat
int main() {
    A a = new A;
    a.f = 5;
    return 1;
}
 
class A {
    int a;
    void f() {}
}

